--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ pretty_env_logger = "0.3.0"
 serde = "1.0.88"
 serde_derive = "1.0.88"
 warp = "0.1.13"
-diesel = { version = "1.0.0", features = ["postgres"] }
+diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
 dotenv = "0.9.0"
+r2d2 = "0.8.3"
+r2d2-diesel = "1.0.0"
